Add tests for bug 51544 (note tests pass - can't reproduce error yet) Fix some find bugs issues
git-svn-id: https://svn.apache.org/repos/asf/tomcat/trunk@1150335 13f79535-47bb-0310-9956-ffa450edef68